fix overflow issue on the chatroo

--- a/web/static/style.css
+++ b/web/static/style.css
@@ -78,11 +78,13 @@
 
 html {
   height: 100%;
+  overflow: hidden;
   font-size: 16px;
 }
 
 body {
   height: 100%;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   font-family: var(--font-sans);
